--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "license": "",
   "author": "",
+  "type": "module",
   "scripts": {
     "build": "parcel build index.html",
     "dev": "parcel index.html --open",
